devops/service-mesh/restaurant-service-cb.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: restaurant-service
spec:
  host: restaurant-service.happy-takeaway.svc.cluster.local
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 10
      http:
        http1MaxPendingRequests: 20
        maxRequestsPerConnection: 5
        maxRetries: 10
