devops/service-mesh/restaurant-service-outlier.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: restaurant-service
spec:
  host: restaurant-service.happy-takeaway.svc.cluster.local
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 5
      http:
        http1MaxPendingRequests: 5
        maxRequestsPerConnection: 10
        maxRetries: 10
    outlierDetection:
      consecutiveGatewayErrors: 5
      baseEjectionTime: 20s
      interval: 10s
